# GarmentMeasurements

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Argparse.cmake  FindFBX.cmake
data/: landmarks_female.json  topology_marks_female.yaml
data/measurements/: arm_length.mes  arm_pose_angle.mes  armscye_depth.mes  back_width.mes  bum_points.mes  bust.mes  bust_line.mes  bust_points.mes  crotch_hip_diff.mes  head_l.mes  height.mes  hip_back_width.mes  hip_inclination.mes  hips.mes  hips_line.mes  leg_circ.mes  leg_circ_left.mes  leg_circ_right.mes  neck_w.mes  shoulder_incl.mes  shoulder_w.mes  underbust.mes  vert_bust_line.mes  waist.mes  waist_back_width.mes  waist_line.mes  waist_over_bust_line.mes  wrist.mes
data/pca/: point.pca_stats.txt
data/selections/: arm_length_vertices.sel  bust.sel  crotch_curve.sel  hip_back_width.sel  hips.sel  leg_circ.sel  leg_circ_left.sel  leg_circ_right.sel  neck_base.sel  neck_w.sel  underbust.sel  waist.sel  waist_line.sel  waist_over_bust_line.sel  wrist.sel
scripts/: example_measurements.yaml  measure.py
src/: CMakeLists.txt  Warnings.h
src/apps/: CMakeLists.txt
src/apps/generate_shapes/: CMakeLists.txt  Viewer.cpp  Viewer.h  find_example_shapes.cpp  main.cpp
src/apps/measurements/: CMakeLists.txt  main.cpp  measure_body.cpp  measure_body.h  measurement.cpp  measurement.h  measurement_defs.h  measurement_utils.cpp  measurement_utils.h
src/character/: CMakeLists.txt  Character.cpp  Character.h  CharacterRenderer.cpp  CharacterRenderer.h  FBX_file.cpp  FBX_file.h  IO_bim.cpp  IO_character.cpp  IO_character.h  Joint.cpp  Joint.h  Mean_value_coordinates.cpp  Mean_value_coordinates.h  PCA.h  Skeleton.cpp  Skeleton.h  Skeleton_shader.h  SkinnedMesh.cpp  SkinnedMesh.h  SkinnedMeshProperties.h  Skinning.h
src/io/: CMakeLists.txt  io_measurement.cpp  io_measurement.h  io_selection.cpp  io_selection.h  io_toolbox.cpp  io_toolbox.h
src/templatefitting/: BIM_file.cpp  BIM_file.h  Character.cpp  Character.h  Character_shader.h  IO_character.h  Joint.cpp  Mean_value_coordinates.h  PCA.cpp  Skeleton.cpp  SkinnedMeshProperties.h  Skinning.h
src/utils/: CMakeLists.txt  defs.h
